--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -1,13 +1,15 @@
 name: Compile Firmware
 
 on:
+  workflow_dispatch
   push:
     branches:
     - master
   pull_request:
     branches:
     - master
-  workflow_dispatch:
+
+
   
 jobs:
   Build:
