--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -1,6 +1,12 @@
 name: Compile Firmware
 
 on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
   workflow_dispatch:
 
 jobs:
